implemented my own jdbi layer